redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:    
      containers:
      - name: result
        image: redis:5.0
        ports:
        - containerPort: 6379
      restartPolicy: Always
